--- a/FINAL_POO/src/final_poo/GestionEscritorio.form
+++ b/FINAL_POO/src/final_poo/GestionEscritorio.form
@@ -405,7 +405,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="6" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -435,7 +435,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                   <Component id="jComboBox3" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="167" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -453,11 +453,24 @@
         <Component class="javax.swing.JComboBox" name="jComboBox3">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+              <StringArray count="17">
+                <StringItem index="0" value="Seleccionar"/>
+                <StringItem index="1" value="Azuay"/>
+                <StringItem index="2" value="Bol&#xed;var"/>
+                <StringItem index="3" value="Ca&#xf1;ar"/>
+                <StringItem index="4" value="Chimborazo"/>
+                <StringItem index="5" value="Cotopaxi"/>
+                <StringItem index="6" value="Esmeraldas"/>
+                <StringItem index="7" value="Guayas"/>
+                <StringItem index="8" value="Imbabura"/>
+                <StringItem index="9" value="Loja"/>
+                <StringItem index="10" value="Los R&#xed;os"/>
+                <StringItem index="11" value="Manab&#xed;"/>
+                <StringItem index="12" value="Napo"/>
+                <StringItem index="13" value="Pastaza"/>
+                <StringItem index="14" value="Pichincha"/>
+                <StringItem index="15" value="Santo Domingo de los Ts&#xe1;chilas"/>
+                <StringItem index="16" value="Tungurahua"/>
               </StringArray>
             </Property>
           </Properties>
